# git-probe

./: .gitignore  README.md  ai_summary.py  config.yaml  env.example  git_probe.py  probe.yaml  pyproject.toml  run.sh  usage.md
awesome_probe/: free_resource.yaml  vector_database.yaml
core/: ai_summary.py  git_probe.py
history/: changes_2025-04-27.md  changes_2025-04-28.md  changes_2025-04-29T01:23:12.md  changes_2025-04-30T01:38:45.md  changes_2025-05-01T01:23:32.md  changes_2025-05-02T01:21:34.md  changes_2025-05-03T01:39:05.md  changes_2025-05-04T01:26:46.md  changes_2025-05-05T01:24:00.md  changes_2025-05-06T01:24:55.md  changes_2025-05-07T01:25:07.md  changes_2025-05-08T01:24:30.md  changes_2025-05-09T01:21:37.md  changes_2025-05-10T01:37:11.md  changes_2025-05-11T01:27:26.md  changes_2025-05-12T01:25:44.md  changes_2025-05-13T01:24:27.md  changes_2025-05-14T01:22:35.md  changes_2025-05-15T01:25:47.md  changes_2025-05-16T01:23:36.md  changes_2025-05-17T01:38:32.md  changes_2025-05-18T01:37:54.md  changes_2025-05-19T01:26:35.md  changes_2025-05-20T01:26:09.md  changes_2025-05-21T01:25:19.md  changes_2025-05-22T01:25:40.md  changes_2025-05-23T01:22:49.md  changes_2025-05-24T01:40:43.md  changes_2025-05-25T01:27:35.md  changes_2025-05-26T01:24:46.md  changes_2025-05-27T01:26:24.md  changes_2025-05-28T01:26:06.md  changes_2025-05-29T01:24:05.md  changes_2025-05-30T01:24:12.md  changes_2025-05-31T01:49:56.md  changes_2025-06-01T01:38:48.md  changes_2025-06-02T01:27:25.md  changes_2025-06-03T01:27:35.md  changes_2025-06-04T01:26:23.md  changes_2025-06-05T01:26:11.md  (+413 more)
(+3 files in other folders)
